unpackaged/main/default/objects/ActionPlanTemplate__c/fields/SkipWeekends__c.field-meta.xml
<CustomField>
    <fullName>SkipWeekends__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, tasks included in an Action Plan will not be given a Due Date that falls on a weekend.</description>
    <inlineHelpText>If selected, tasks included in an Action Plan will not be given a Due Date that falls on a weekend.</inlineHelpText>
    <label>Skip Weekends</label>
    <type>Checkbox</type>
</CustomField>