unpackaged/main/default/objects/ActionPlanTemplate__c/fields/TaskRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>TaskRecordTypeID__c</fullName>
    <label>Task Record Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>